Validate and harden scheduling flow
Frontend
- Improve axios interceptors: always attach JWT, implement automatic refresh flow, handle 409 (optimistic locking) and 422 (batch validation) with clearer messages, and purge tokens on refresh failure.
- Strengthen useScheduleAlgorithm hook: tighter Axios error handling, use isAxiosError, enforce task version presence before save (optimistic locking), normalize fitnessData type, clearer success/error messages, and surface batch validation/409 errors to the UI.
- Update Schedule page: UI tweaks and layout formatting, add a global error banner that renders validationErrors, import AlertCircle for error display, and wire validationErrors from the hook into the page.

Backend
- Add validation and hardening for algorithm integration: inject jakarta Validator into AlgorithmClient, validate algorithm responses, tighten timeouts and logging, and fail on invalid or empty responses.
- Add Jakarta Bean Validation annotations across algorithm DTOs (AlgoScheduleResponse, AlgoTaskAssignmentResponse, SaveScheduleRequest, etc.) to enforce message shape and integrity.
- Refactor SchedulingService.saveApprovedSchedule for a Zero-Trust, bulk-validated flow: bulk-load entities to avoid N+1 queries, accumulate validation errors, perform overlap/temporal/dependency checks, and throw BatchValidationException on failure; enforce optimistic locking via version checks.
- Minor API/controller/service cleanups: remove/streamline comments, adjust PreAuthorize scopes, and make other code-style formatting adjustments.
- Add Caffeine dependency in pom.xml and add new CycleDetectionUtil utility.

Overall this change tightens validation, improves error handling and logging, defends against concurrent modifications via optimistic locking, and hardens the scheduling interaction with the external algorithm service.